# c-codebase

./: .gitignore  CMakeLists.txt
examples/base/: CMakeLists.txt  sorting.cpp
examples/computer_graphics/: CMakeLists.txt  circle_drawing.cpp  clipping.cpp  naive_line_drawing.cpp  polygon_filling.cpp
src/base/: CMakeLists.txt  sorting.c  sorting.h
src/computer_graphics/: CMakeLists.txt  circle_drawing.c  circle_drawing.h  circle_drawing.priv.h  clipping.c  clipping.h  clipping.priv.h  line_drawing.c  line_drawing.h  polygon_filling.c  polygon_filling.h  polygon_filling.priv.h  types.h  utils.c  utils.h
src/linked_lists/: CMakeLists.txt  clist.c  clist.h  list.c  list.h  types.h
tests/computer_graphics/: CMakeLists.txt
tests/linked_lists/: CMakeLists.txt  clist_test.cpp
