file(GLOB CG_EXAMPLE_SOURCES ./*.cpp)

foreach (cg_example_source ${CG_EXAMPLE_SOURCES})
    cmake_path(GET cg_example_source STEM cg_example_name)
    add_executable(${cg_example_name} ${cg_example_source})
    target_link_libraries(${cg_example_name} cg m)
    if (WIN32)
        target_link_libraries(${cg_example_name} opengl32 glu32 freeglut)
    elseif (APPLE)
        target_link_libraries(${cg_example_name} "-framework OpenGL" "-framework GLUT")
    elseif (UNIX)
        target_link_libraries(${cg_example_name} GL glut GLU X11)
    endif ()
endforeach ()